Fix uni-checkbox on mobile and clean SVGs

--- a/addon/styles/partials/_uni-checkbox.scss
+++ b/addon/styles/partials/_uni-checkbox.scss
@@ -3,6 +3,10 @@
   @include align-items-center();
   width: 100%;
   cursor: pointer;
+
+  @include breakpoint(small) {
+    padding: 20px;
+  }
 }
 
 .uni-checkbox {
@@ -13,12 +17,21 @@
     @include flex();
     @include align-items-center();
     @include justify-content-center();
-  }
 
-  &--checked svg {
+    svg {
       display: block;
       fill: color("background");
       width: 14px;
       height: 11px;
+    }
+  }
+
+  @include breakpoint(small) {
+    label {
+      max-width: 146px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
 }
